# librefang

./: .gitignore  .secrets.baseline  CHANGELOG.md  CLAUDE.md  Cargo.toml  deny.toml  flake.nix  librefang.toml.example  openapi.json
.github/: SECRETS.md
.github/actions/publish-arch-repo/: action.yml
.github/actions/publish-aur/: action.yml
.github/workflows/: ci.yml  dashboard-build.yml  deploy-docs.yml  deploy-web.yml  lighthouse.yml  mobile-smoke.yml  release-cli.yml  release-desktop.yml  release.yml  test-web.yml
articles/: release-2026.6.29.md
conformance/sidecar/: README.md
crates/librefang-api/: Cargo.toml
crates/librefang-api/dashboard/src/: App.tsx  api.ts  router.tsx
crates/librefang-api/dashboard/src/components/: AgentSkillItem.test.tsx  AgentSkillItem.tsx  TomlViewer.tsx
crates/librefang-api/dashboard/src/components/ui/: CommandPalette.tsx  DrawerPanel.test.tsx
crates/librefang-api/dashboard/src/lib/: i18n.ts  useKeyboardShortcuts.ts
crates/librefang-api/dashboard/src/lib/__tests__/: en-locale-coverage.test.ts
crates/librefang-api/dashboard/src/lib/http/: client.ts
crates/librefang-api/dashboard/src/lib/mutations/: agents-skills.test.tsx  agents.ts  analytics.ts  channels.ts  runtime.ts
crates/librefang-api/dashboard/src/lib/queries/: agents-skills.test.tsx  agents.ts  analytics.ts  channels.ts  keys.ts
crates/librefang-api/dashboard/src/locales/: en.json  ko.json  uk.json  zh.json
crates/librefang-api/dashboard/src/pages/: AgentsPage.tsx  AnalyticsPage.test.tsx  AnalyticsPage.tsx  ChannelsPage.test.tsx  ChannelsPage.tsx  HandsPage.tsx  ModelsPage.test.tsx  ModelsPage.tsx  ProvidersPage.test.tsx  ProvidersPage.tsx  SettingsPage.tsx  TasksPage.test.tsx  TasksPage.tsx  UsersPage.test.tsx
crates/librefang-api/src/: channel_bridge.rs  middleware.rs  openapi.rs  rate_limiter.rs  server.rs  webchat.rs  ws.rs
crates/librefang-api/src/routes/: agents.rs  budget.rs  channels.rs  config.rs  network.rs  providers.rs  secrets_env.rs  sidecar_describe.rs  sidecar_toml.rs  skills.rs  tools_sessions.rs  webhooks.rs
crates/librefang-api/src/routes/agents/: sessions.rs
crates/librefang-api/src/routes/skills/: hands.rs
crates/librefang-api/static/locales/: ko.json
crates/librefang-api/tests/: agents_capabilities_files_integration.rs  agents_routes_integration.rs  api_integration_test.rs  auth_public_allowlist.rs  channel_remove_test.rs  channels_routes_test.rs  config_routes_integration.rs  hands_routes_integration.rs  provider_budget_routes_test.rs  providers_routes_test.rs  sidecar_describe_test.rs  sidecar_toml_test.rs  skill_workshop_pending_routes_test.rs  system_tools_sessions_test.rs  webchat_spa_fallback_test.rs  webhooks_routes_integration.rs  workflow_operator_nodes_test.rs
crates/librefang-api/tests/fixtures/: kernel_config_schema.golden.json
crates/librefang-channels/: AGENTS.md  Cargo.toml  README.md
crates/librefang-channels/src/: bridge.rs  channels-allowlist.txt  embedded_sdk.rs  formatter.rs  lib.rs  router.rs  sidecar.rs  types.rs
crates/librefang-channels/tests/: sidecar_protocol_conformance.rs
crates/librefang-cli/: Cargo.toml
crates/librefang-cli/locales/en/: main.ftl
crates/librefang-cli/locales/ko/: main.ftl
crates/librefang-cli/locales/uk/: main.ftl
crates/librefang-cli/locales/zh-CN/: main.ftl
crates/librefang-cli/src/: cli.rs  i18n.rs  main.rs
crates/librefang-cli/src/commands/: agent.rs  auth.rs  automation.rs  channel.rs  common.rs  config.rs  daemon.rs  doctor_cmd.rs  hand.rs  init.rs  maintenance.rs  mcp_cmds.rs  mod.rs  models.rs  monitoring.rs  prelude.rs  skill.rs  status.rs  system.rs
crates/librefang-cli/src/tui/: event.rs  mod.rs
crates/librefang-cli/src/tui/screens/: agents.rs  channels.rs  extensions.rs  init_wizard.rs  memory.rs  mod.rs  peers.rs  sessions.rs  skills.rs  triggers.rs  wizard.rs  workflows.rs
crates/librefang-cli/tests/: i18n_checks.rs
crates/librefang-desktop/: Cargo.toml  tauri.conf.json
crates/librefang-extensions/: Cargo.toml
crates/librefang-extensions/src/: installer.rs  vault.rs
crates/librefang-runtime/: Cargo.toml
crates/librefang-runtime/src/: auth_cooldown.rs  aux_client.rs  compactor.rs  context_compressor.rs  history_fold.rs  plugin_manager.rs  plugin_runtime.rs  proactive_memory.rs  routing.rs  web_fetch_to_file.rs  workspace_sandbox.rs
crates/librefang-runtime/src/agent_loop/: end_turn.rs  mod.rs  retry.rs  run_streaming.rs  types.rs  web_augment.rs
crates/librefang-runtime/src/agent_loop/tests/: integration.rs  recovery.rs  utilities.rs
crates/librefang-runtime/src/context_engine/: tests.rs
crates/librefang-runtime/src/context_engine/scriptable/: mod.rs
crates/librefang-runtime/src/plugin_manager/: tests.rs
crates/librefang-runtime/src/plugin_runtime/: tests.rs
crates/librefang-runtime/src/tool_runner/: agent.rs  channel.rs  definitions.rs  dispatch.rs  schedule.rs  shell.rs  shell_safety.rs
crates/librefang-runtime/src/tool_runner/tests/: mod.rs
crates/librefang-runtime/tests/: proactive_memory_extraction_model_override.rs  token_estimation_accuracy.rs
crates/librefang-runtime/tests/fixtures/token_estimation/: README.md  corpus.json  tokens_truth.example.json  tokens_truth.json  tokens_truth_gptoss.json
docs/: package.json  pnpm-lock.yaml
docs/architecture/: message-history-trimming.md  sidecar-channels.md  sidecar-protocol.md
docs/operations/: config-reload.md
i18n/: ko.toml
packaging/arch-repo/: README.md  publish-arch-repo.sh
packaging/aur/: README.md  publish-to-aur.sh
scripts/tests/: install_sh_test.sh
sdk/go/: librefang.go
sdk/javascript/: index.js  package.json
sdk/python/: setup.py
sdk/rust/: Cargo.toml
sdk/rust/librefang-sidecar/: Cargo.toml  README.md
sdk/rust/librefang-sidecar/examples/: echo.rs
sdk/rust/librefang-sidecar/src/: lib.rs  protocol.rs  runtime.rs
sdk/rust/librefang-sidecar/tests/: conformance.rs
sdk/rust/src/: lib.rs
web/public/: install.ps1  install.sh
xtask/baselines/: config.sha256  openapi.sha256
xtask/src/: changelog.rs
(+144 files in other folders)
