[package]
name = "librefang-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP/WebSocket API server for the LibreFang Agent OS daemon"
readme = "README.md"

[dependencies]
librefang-types = { path = "../librefang-types" }
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
librefang-kernel = { path = "../librefang-kernel" }
librefang-acp = { path = "../librefang-acp", features = ["kernel-adapter"] }
agent-client-protocol = { workspace = true }
tokio-util = { workspace = true }
librefang-kernel-handle = { path = "../librefang-kernel-handle" }
librefang-llm-drivers = { path = "../librefang-llm-drivers" }
librefang-memory = { path = "../librefang-memory" }
librefang-channels = { path = "../librefang-channels", default-features = false }
librefang-wire = { path = "../librefang-wire" }
librefang-skills = { path = "../librefang-skills" }
librefang-hands = { path = "../librefang-hands" }
librefang-extensions = { path = "../librefang-extensions" }
librefang-migrate = { path = "../librefang-migrate" }
librefang-telemetry = { path = "../librefang-telemetry" }
librefang-http = { path = "../librefang-http" }
anyhow = { workspace = true }
arc-swap = { workspace = true }
dashmap = { workspace = true }
portable-pty = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { version = "0.25", features = ["serde"] }
tracing = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
tokio-stream = { workspace = true }
subtle = { workspace = true }
base64 = { workspace = true }
socket2 = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
url = { workspace = true }
psl = { workspace = true }
zip = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }
jsonwebtoken = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
argon2 = "0.5"
hex = { workspace = true }
rand = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { version = "5", features = ["axum_extras"] }
include_dir = "0.7"

# Optional telemetry deps (gated behind `telemetry` feature)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }

[features]
# Default = a small "core-channels" set + telemetry. Heavy / unmaintained
# adapters (matrix, email/imap, google-chat, …) stay opt-in
# via `--features all-channels` so plain `cargo build` and downstream
# library users don't pay the compile-time cost. Release / packaging
# pipelines opt in to `all-channels` explicitly. See #3655 / #3688.
default = ["core-channels", "telemetry"]

# OpenTelemetry tracing export + Prometheus metrics
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:metrics",
    "dep:metrics-exporter-prometheus",
]

# Individual channel features — forwarded to librefang-channels
# email migrated to a sidecar (librefang.sidecar.adapters.email);
# see SIDECAR_CATALOG in src/routes/channels.rs.
channel-webhook = ["librefang-channels/channel-webhook"]
# whatsapp migrated to a sidecar (librefang.sidecar.adapters.whatsapp);
# see SIDECAR_CATALOG in src/routes/channels.rs.
# teams migrated to a sidecar (librefang.sidecar.adapters.teams);
# see SIDECAR_CATALOG in src/routes/channels.rs.
channel-google-chat = ["librefang-channels/channel-google-chat"]
# dingtalk migrated to a sidecar (librefang.sidecar.adapters.dingtalk);
# see SIDECAR_CATALOG in src/routes/channels.rs.
# wechat migrated to a sidecar (librefang.sidecar.adapters.wechat);
# see SIDECAR_CATALOG in src/routes/channels.rs.
# wecom migrated to a sidecar (librefang.sidecar.adapters.wecom);
# see SIDECAR_CATALOG in src/routes/channels.rs.

# Small curated default set: 5 light adapters covering the most common
# integration points. Each member only uses the workspace HTTP stack
# (`reqwest` + `rustls`) — no heavy/unmaintained transitive deps at the
# time of writing. If you add a member, double-check its dep tree before
# growing this set. Used by `librefang-api`'s `default` and forwarded by
# `librefang-cli`'s `default`. Anything bigger should opt in via
# `all-channels` (or pick individual channels).
core-channels = [
    "channel-webhook",
]

all-channels = [
    "channel-webhook",
    "channel-google-chat",
]

# All channels except email — kept as an alias for `all-channels`
# now that email lives in the sidecar (the Android-specific carve-out
# is no longer needed). Removed entirely in a follow-up once
# `mobile-smoke.yml` is rewired to use `all-channels` directly.
all-channels-no-email = [
    "channel-webhook",
    "channel-google-chat",
]

# Mini: a small core set of channels
mini = [
    "channel-webhook",
    "channel-google-chat",
]

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1", features = ["process"] }
libc = "0.2"

# Windows-only: SDDL → SECURITY_DESCRIPTOR for the ACP named-pipe
# listener (#3313). Restricts the pipe DACL to the daemon's owner SID
# so other local users can't connect. The features list is the minimum
# needed for `ConvertStringSecurityDescriptorToSecurityDescriptorW` +
# `SECURITY_ATTRIBUTES` + `LocalFree`. windows-sys is already in the
# dependency tree transitively (tokio uses it on Windows), so adding
# it as a direct dep is essentially free.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
] }

[dev-dependencies]
tempfile = { workspace = true }
uuid = { workspace = true }
http-body-util = "0.1"
librefang-testing = { path = "../librefang-testing" }
# tool-exec backend integration test (#3332)
librefang-runtime = { path = "../librefang-runtime" }
totp-rs = { workspace = true }
# OIDC `sub` claim enforcement integration test (#5128): generates RSA
# keypairs in-process, signs JWTs with `jsonwebtoken`, and serves the
# resulting JWKS over a local axum listener so `validate_jwt_cached` can
# be driven end-to-end without a live identity provider.
rsa = { workspace = true }

[lints]
workspace = true
